# gl

./: .gitignore  .travis.yml  AGENTS.md  CHANGELOG.markdown  Generator.hs  Graphics-GL-Raw-Extension-AMD-BlendMinmaxFactor.html  Graphics-GL-Raw-Extension-AMD-Compressed3DCTexture.html  Graphics-GL-Raw-Extension-AMD-CompressedATCTexture.html  Graphics-GL-Raw-Extension-AMD-ConservativeDepth.html  Graphics-GL-Raw-Extension-AMD-DebugOutput.html  Graphics-GL-Raw-Extension-AMD-DepthClampSeparate.html  Graphics-GL-Raw-Extension-AMD-DrawBuffersBlend.html  Graphics-GL-Raw-Extension-AMD-GcnShader.html  Graphics-GL-Raw-Extension-AMD-GpuShaderInt64.html  Graphics-GL-Raw-Extension-AMD-InterleavedElements.html  Graphics-GL-Raw-Extension-AMD-MultiDrawIndirect.html  Graphics-GL-Raw-Extension-AMD-NameGenDelete.html  Graphics-GL-Raw-Extension-AMD-OcclusionQueryEvent.html  Graphics-GL-Raw-Extension-AMD-PerformanceMonitor.html  Graphics-GL-Raw-Extension-AMD-PinnedMemory.html  Graphics-GL-Raw-Extension-AMD-ProgramBinaryZ400.html  Graphics-GL-Raw-Extension-AMD-QueryBufferObject.html  Graphics-GL-Raw-Extension-AMD-SamplePositions.html  Graphics-GL-Raw-Extension-AMD-SeamlessCubemapPerTexture.html  Graphics-GL-Raw-Extension-AMD-ShaderAtomicCounterOps.html  Graphics-GL-Raw-Extension-AMD-ShaderStencilExport.html  Graphics-GL-Raw-Extension-AMD-ShaderTrinaryMinmax.html  Graphics-GL-Raw-Extension-AMD-SparseTexture.html  Graphics-GL-Raw-Extension-AMD-StencilOperationExtended.html  Graphics-GL-Raw-Extension-AMD-TextureTexture4.html  Graphics-GL-Raw-Extension-AMD-TransformFeedback3LinesTriangles.html  Graphics-GL-Raw-Extension-AMD-TransformFeedback4.html  Graphics-GL-Raw-Extension-AMD-VertexShaderLayer.html  Graphics-GL-Raw-Extension-AMD-VertexShaderTessellator.html  Graphics-GL-Raw-Extension-AMD-VertexShaderViewportIndex.html  Graphics-GL-Raw-Extension-AMD.html  Graphics-GL-Raw-Extension-ANDROID-ExtensionPackEs31a.html  Graphics-GL-Raw-Extension-ANDROID.html  Graphics-GL-Raw-Extension-ANGLE-DepthTexture.html  Graphics-GL-Raw-Extension-ANGLE-FramebufferBlit.html  (+1495 more)
.github/workflows/: haskell-ci.yml
Graphics/: OpenGL.hs
Graphics/OpenGL/: Basic.hs  Types.hsc
cbits/: gl.c
gl/: CHANGELOG.markdown  LICENSE  README.markdown  TODO.markdown  gl.cabal
gl/cbits/: gl.c
gl/src/Graphics/: GL.hs
gl/src/Graphics/GL/: Types.hs
gl/src/Graphics/GL/Internal/: Proc.hs
src/: Generator.hs  Graphics-GL-Raw-Extension-AMD-BlendMinmaxFactor.html  Graphics-GL-Raw-Extension-AMD-Compressed3DCTexture.html  Graphics-GL-Raw-Extension-AMD-CompressedATCTexture.html  Graphics-GL-Raw-Extension-AMD-ConservativeDepth.html  Graphics-GL-Raw-Extension-AMD-DebugOutput.html  Graphics-GL-Raw-Extension-AMD-DepthClampSeparate.html  Graphics-GL-Raw-Extension-AMD-DrawBuffersBlend.html  Graphics-GL-Raw-Extension-AMD-GcnShader.html  Graphics-GL-Raw-Extension-AMD-GpuShaderInt64.html  Graphics-GL-Raw-Extension-AMD-InterleavedElements.html  Graphics-GL-Raw-Extension-AMD-MultiDrawIndirect.html  Graphics-GL-Raw-Extension-AMD-NameGenDelete.html  Graphics-GL-Raw-Extension-AMD-OcclusionQueryEvent.html  Graphics-GL-Raw-Extension-AMD-PerformanceMonitor.html  Graphics-GL-Raw-Extension-AMD-PinnedMemory.html  Graphics-GL-Raw-Extension-AMD-ProgramBinaryZ400.html  Graphics-GL-Raw-Extension-AMD-QueryBufferObject.html  Graphics-GL-Raw-Extension-AMD-SamplePositions.html  Graphics-GL-Raw-Extension-AMD-SeamlessCubemapPerTexture.html  Graphics-GL-Raw-Extension-AMD-ShaderAtomicCounterOps.html  Graphics-GL-Raw-Extension-AMD-ShaderStencilExport.html  Graphics-GL-Raw-Extension-AMD-ShaderTrinaryMinmax.html  Graphics-GL-Raw-Extension-AMD-SparseTexture.html  Graphics-GL-Raw-Extension-AMD-StencilOperationExtended.html  Graphics-GL-Raw-Extension-AMD-TextureTexture4.html  Graphics-GL-Raw-Extension-AMD-TransformFeedback3LinesTriangles.html  Graphics-GL-Raw-Extension-AMD-TransformFeedback4.html  Graphics-GL-Raw-Extension-AMD-VertexShaderLayer.html  Graphics-GL-Raw-Extension-AMD-VertexShaderTessellator.html  Graphics-GL-Raw-Extension-AMD-VertexShaderViewportIndex.html  Graphics-GL-Raw-Extension-AMD.html  Graphics-GL-Raw-Extension-ANDROID-ExtensionPackEs31a.html  Graphics-GL-Raw-Extension-ANDROID.html  Graphics-GL-Raw-Extension-ANGLE-DepthTexture.html  Graphics-GL-Raw-Extension-ANGLE-FramebufferBlit.html  Graphics-GL-Raw-Extension-ANGLE-FramebufferMultisample.html  Graphics-GL-Raw-Extension-ANGLE-InstancedArrays.html  Graphics-GL-Raw-Extension-ANGLE-PackReverseRowOrder.html  Graphics-GL-Raw-Extension-ANGLE-ProgramBinary.html  (+716 more)
src/Graphics/: GL.hs
src/Graphics/GL/: Types.hs
src/Graphics/GL/Internal/: Proc.hs
src/Graphics/GL/Raw/: Proc.hs  Types.hs
src/Graphics/GL/Raw/Internal/: Proc.hs
