name:          gl
version:       0.4
synopsis:      Complete OpenGL raw bindings
description:   Complete OpenGL raw bindings
license:       BSD3
license-file:  LICENSE
author:        Edward A. Kmett, Gabríel Arthúr Pétursson, Sven Panne
maintainer:    ekmett@gmail.com
copyright:     Copyright © 2014 Edward A. Kmett,
               Copyright © 2014 Gabríel Arthúr Pétursson,
               Copyright © 2013 Sven Panne
category:      Graphics
build-type:    Custom
cabal-version: >=1.18
extra-source-files:
  gl.xml man.txt extensions.txt
  CHANGELOG.markdown README.markdown TODO.markdown
  Generator.hs Module.hs Parser.hs Registry.hs Utils.hs

source-repository head
  type:     git
  location: https://github.com/ekmett/gl

flag UseNativeWindowsLibraries
   description:
      When compiling under Windows, use the native libraries instead of e.g. the
      ones coming with Cygwin.

flag UseGlXGetProcAddress
   description:
      Use glXGetProcAddress instead of dlsym on non-Windows/-Darwin platforms.

library
  hs-source-dirs: src
  c-sources: cbits/gl.c
  ghc-options: -Wall -O2

  build-depends:
      base == 4.*
    , containers == 0.5.*
    , fixed >= 0.2.1 && < 0.3
    , half >= 0.2 && < 0.3
    , transformers >= 0.2 && < 0.5

  -- for Setup.hs
  build-depends:
      directory == 1.2.*
    , filepath == 1.3.*
    , hxt == 9.3.*
    , split == 0.2.*

  default-language: Haskell2010

  if os(windows) && flag(UseNativeWindowsLibraries)
    if arch(i386)
      cpp-options: "-DCALLCONV=stdcall"
    else
      cpp-options: "-DCALLCONV=ccall"
    cc-options: "-DUSE_WGLGETPROCADDRESS"
    extra-libraries: opengl32
  else
    cpp-options: "-DCALLCONV=ccall"
    if !os(darwin) && !os(ios) && flag(UseGlXGetProcAddress)
      cc-options: "-DUSE_GLXGETPROCADDRESS"
    else
      cc-options: "-DUSE_DLSYM"
    if os(darwin)
      frameworks: OpenGL
    else
      if os(ios)
        frameworks: OpenGLES
      else
        extra-libraries: GL

  exposed-modules:
    Graphics.GL.Raw.Internal.FFI
    Graphics.GL.Raw.Internal.Proc
    Graphics.GL.Raw.Internal.Shared
    Graphics.GL.Raw.Types
    Graphics.GL.Raw.Extension
    Graphics.GL.Raw.Extension.ThreeDFX
    Graphics.GL.Raw.Extension.ThreeDFX.Multisample
    Graphics.GL.Raw.Extension.ThreeDFX.Tbuffer
    Graphics.GL.Raw.Extension.ThreeDFX.TextureCompressionFXT1
    Graphics.GL.Raw.Extension.AMD
    Graphics.GL.Raw.Extension.AMD.BlendMinmaxFactor
    Graphics.GL.Raw.Extension.AMD.Compressed3DCTexture
    Graphics.GL.Raw.Extension.AMD.CompressedATCTexture
    Graphics.GL.Raw.Extension.AMD.ConservativeDepth
    Graphics.GL.Raw.Extension.AMD.DebugOutput
    Graphics.GL.Raw.Extension.AMD.DepthClampSeparate
    Graphics.GL.Raw.Extension.AMD.DrawBuffersBlend
    Graphics.GL.Raw.Extension.AMD.GcnShader
    Graphics.GL.Raw.Extension.AMD.GpuShaderInt64
    Graphics.GL.Raw.Extension.AMD.InterleavedElements
    Graphics.GL.Raw.Extension.AMD.MultiDrawIndirect
    Graphics.GL.Raw.Extension.AMD.NameGenDelete
    Graphics.GL.Raw.Extension.AMD.OcclusionQueryEvent
    Graphics.GL.Raw.Extension.AMD.PerformanceMonitor
    Graphics.GL.Raw.Extension.AMD.PinnedMemory
    Graphics.GL.Raw.Extension.AMD.ProgramBinaryZ400
    Graphics.GL.Raw.Extension.AMD.QueryBufferObject
    Graphics.GL.Raw.Extension.AMD.SamplePositions
    Graphics.GL.Raw.Extension.AMD.SeamlessCubemapPerTexture
    Graphics.GL.Raw.Extension.AMD.ShaderAtomicCounterOps
    Graphics.GL.Raw.Extension.AMD.ShaderStencilExport
    Graphics.GL.Raw.Extension.AMD.ShaderTrinaryMinmax
    Graphics.GL.Raw.Extension.AMD.SparseTexture
    Graphics.GL.Raw.Extension.AMD.StencilOperationExtended
    Graphics.GL.Raw.Extension.AMD.TextureTexture4
    Graphics.GL.Raw.Extension.AMD.TransformFeedback3LinesTriangles
    Graphics.GL.Raw.Extension.AMD.TransformFeedback4
    Graphics.GL.Raw.Extension.AMD.VertexShaderLayer
    Graphics.GL.Raw.Extension.AMD.VertexShaderTessellator
    Graphics.GL.Raw.Extension.AMD.VertexShaderViewportIndex
    Graphics.GL.Raw.Extension.ANDROID
    Graphics.GL.Raw.Extension.ANDROID.ExtensionPackEs31a
    Graphics.GL.Raw.Extension.ANGLE
    Graphics.GL.Raw.Extension.ANGLE.DepthTexture
    Graphics.GL.Raw.Extension.ANGLE.FramebufferBlit
    Graphics.GL.Raw.Extension.ANGLE.FramebufferMultisample
    Graphics.GL.Raw.Extension.ANGLE.InstancedArrays
    Graphics.GL.Raw.Extension.ANGLE.PackReverseRowOrder
    Graphics.GL.Raw.Extension.ANGLE.ProgramBinary
    Graphics.GL.Raw.Extension.ANGLE.TextureCompressionDxt3
    Graphics.GL.Raw.Extension.ANGLE.TextureCompressionDxt5
    Graphics.GL.Raw.Extension.ANGLE.TextureUsage
    Graphics.GL.Raw.Extension.ANGLE.TranslatedShaderSource
    Graphics.GL.Raw.Extension.APPLE
    Graphics.GL.Raw.Extension.APPLE.AuxDepthStencil
    Graphics.GL.Raw.Extension.APPLE.ClientStorage
    Graphics.GL.Raw.Extension.APPLE.ClipDistance
    Graphics.GL.Raw.Extension.APPLE.ColorBufferPackedFloat
    Graphics.GL.Raw.Extension.APPLE.CopyTextureLevels
    Graphics.GL.Raw.Extension.APPLE.ElementArray
    Graphics.GL.Raw.Extension.APPLE.Fence
    Graphics.GL.Raw.Extension.APPLE.FloatPixels
    Graphics.GL.Raw.Extension.APPLE.FlushBufferRange
    Graphics.GL.Raw.Extension.APPLE.FramebufferMultisample
    Graphics.GL.Raw.Extension.APPLE.ObjectPurgeable
    Graphics.GL.Raw.Extension.APPLE.Rgb422
    Graphics.GL.Raw.Extension.APPLE.RowBytes
    Graphics.GL.Raw.Extension.APPLE.SpecularVector
    Graphics.GL.Raw.Extension.APPLE.Sync
    Graphics.GL.Raw.Extension.APPLE.Texture2DLimitedNpot
    Graphics.GL.Raw.Extension.APPLE.TextureFormatBGRA8888
    Graphics.GL.Raw.Extension.APPLE.TextureMaxLevel
    Graphics.GL.Raw.Extension.APPLE.TexturePackedFloat
    Graphics.GL.Raw.Extension.APPLE.TextureRange
    Graphics.GL.Raw.Extension.APPLE.TransformHint
    Graphics.GL.Raw.Extension.APPLE.VertexArrayObject
    Graphics.GL.Raw.Extension.APPLE.VertexArrayRange
    Graphics.GL.Raw.Extension.APPLE.VertexProgramEvaluators
    Graphics.GL.Raw.Extension.APPLE.Ycbcr422
    Graphics.GL.Raw.Extension.ARB
    Graphics.GL.Raw.Extension.ARB.ES2Compatibility
    Graphics.GL.Raw.Extension.ARB.ES31Compatibility
    Graphics.GL.Raw.Extension.ARB.ES3Compatibility
    Graphics.GL.Raw.Extension.ARB.ArraysOfArrays
    Graphics.GL.Raw.Extension.ARB.BaseInstance
    Graphics.GL.Raw.Extension.ARB.BindlessTexture
    Graphics.GL.Raw.Extension.ARB.BlendFuncExtended
    Graphics.GL.Raw.Extension.ARB.BufferStorage
    Graphics.GL.Raw.Extension.ARB.ClEvent
    Graphics.GL.Raw.Extension.ARB.ClearBufferObject
    Graphics.GL.Raw.Extension.ARB.ClearTexture
    Graphics.GL.Raw.Extension.ARB.ClipControl
    Graphics.GL.Raw.Extension.ARB.ColorBufferFloat
    Graphics.GL.Raw.Extension.ARB.Compatibility
    Graphics.GL.Raw.Extension.ARB.CompressedTexturePixelStorage
    Graphics.GL.Raw.Extension.ARB.ComputeShader
    Graphics.GL.Raw.Extension.ARB.ComputeVariableGroupSize
    Graphics.GL.Raw.Extension.ARB.ConditionalRenderInverted
    Graphics.GL.Raw.Extension.ARB.ConservativeDepth
    Graphics.GL.Raw.Extension.ARB.CopyBuffer
    Graphics.GL.Raw.Extension.ARB.CopyImage
    Graphics.GL.Raw.Extension.ARB.CullDistance
    Graphics.GL.Raw.Extension.ARB.DebugOutput
    Graphics.GL.Raw.Extension.ARB.DepthBufferFloat
    Graphics.GL.Raw.Extension.ARB.DepthClamp
    Graphics.GL.Raw.Extension.ARB.DepthTexture
    Graphics.GL.Raw.Extension.ARB.DerivativeControl
    Graphics.GL.Raw.Extension.ARB.DirectStateAccess
    Graphics.GL.Raw.Extension.ARB.DrawBuffers
    Graphics.GL.Raw.Extension.ARB.DrawBuffersBlend
    Graphics.GL.Raw.Extension.ARB.DrawElementsBaseVertex
    Graphics.GL.Raw.Extension.ARB.DrawIndirect
    Graphics.GL.Raw.Extension.ARB.DrawInstanced
    Graphics.GL.Raw.Extension.ARB.EnhancedLayouts
    Graphics.GL.Raw.Extension.ARB.ExplicitAttribLocation
    Graphics.GL.Raw.Extension.ARB.ExplicitUniformLocation
    Graphics.GL.Raw.Extension.ARB.FragmentCoordConventions
    Graphics.GL.Raw.Extension.ARB.FragmentLayerViewport
    Graphics.GL.Raw.Extension.ARB.FragmentProgram
    Graphics.GL.Raw.Extension.ARB.FragmentProgramShadow
    Graphics.GL.Raw.Extension.ARB.FragmentShader
    Graphics.GL.Raw.Extension.ARB.FramebufferNoAttachments
    Graphics.GL.Raw.Extension.ARB.FramebufferObject
    Graphics.GL.Raw.Extension.ARB.FramebufferSRGB
    Graphics.GL.Raw.Extension.ARB.GeometryShader4
    Graphics.GL.Raw.Extension.ARB.GetProgramBinary
    Graphics.GL.Raw.Extension.ARB.GetTextureSubImage
    Graphics.GL.Raw.Extension.ARB.GpuShader5
    Graphics.GL.Raw.Extension.ARB.GpuShaderFp64
    Graphics.GL.Raw.Extension.ARB.HalfFloatPixel
    Graphics.GL.Raw.Extension.ARB.HalfFloatVertex
    Graphics.GL.Raw.Extension.ARB.Imaging
    Graphics.GL.Raw.Extension.ARB.IndirectParameters
    Graphics.GL.Raw.Extension.ARB.InstancedArrays
    Graphics.GL.Raw.Extension.ARB.InternalformatQuery
    Graphics.GL.Raw.Extension.ARB.InternalformatQuery2
    Graphics.GL.Raw.Extension.ARB.InvalidateSubdata
    Graphics.GL.Raw.Extension.ARB.MapBufferAlignment
    Graphics.GL.Raw.Extension.ARB.MapBufferRange
    Graphics.GL.Raw.Extension.ARB.MatrixPalette
    Graphics.GL.Raw.Extension.ARB.MultiBind
    Graphics.GL.Raw.Extension.ARB.MultiDrawIndirect
    Graphics.GL.Raw.Extension.ARB.Multisample
    Graphics.GL.Raw.Extension.ARB.Multitexture
    Graphics.GL.Raw.Extension.ARB.OcclusionQuery
    Graphics.GL.Raw.Extension.ARB.OcclusionQuery2
    Graphics.GL.Raw.Extension.ARB.PipelineStatisticsQuery
    Graphics.GL.Raw.Extension.ARB.PixelBufferObject
    Graphics.GL.Raw.Extension.ARB.PointParameters
    Graphics.GL.Raw.Extension.ARB.PointSprite
    Graphics.GL.Raw.Extension.ARB.ProgramInterfaceQuery
    Graphics.GL.Raw.Extension.ARB.ProvokingVertex
    Graphics.GL.Raw.Extension.ARB.QueryBufferObject
    Graphics.GL.Raw.Extension.ARB.RobustBufferAccessBehavior
    Graphics.GL.Raw.Extension.ARB.Robustness
    Graphics.GL.Raw.Extension.ARB.RobustnessIsolation
    Graphics.GL.Raw.Extension.ARB.SampleShading
    Graphics.GL.Raw.Extension.ARB.SamplerObjects
    Graphics.GL.Raw.Extension.ARB.SeamlessCubeMap
    Graphics.GL.Raw.Extension.ARB.SeamlessCubemapPerTexture
    Graphics.GL.Raw.Extension.ARB.SeparateShaderObjects
    Graphics.GL.Raw.Extension.ARB.ShaderAtomicCounters
    Graphics.GL.Raw.Extension.ARB.ShaderBitEncoding
    Graphics.GL.Raw.Extension.ARB.ShaderDrawParameters
    Graphics.GL.Raw.Extension.ARB.ShaderGroupVote
    Graphics.GL.Raw.Extension.ARB.ShaderImageLoadStore
    Graphics.GL.Raw.Extension.ARB.ShaderImageSize
    Graphics.GL.Raw.Extension.ARB.ShaderObjects
    Graphics.GL.Raw.Extension.ARB.ShaderPrecision
    Graphics.GL.Raw.Extension.ARB.ShaderStencilExport
    Graphics.GL.Raw.Extension.ARB.ShaderStorageBufferObject
    Graphics.GL.Raw.Extension.ARB.ShaderSubroutine
    Graphics.GL.Raw.Extension.ARB.ShaderTextureImageSamples
    Graphics.GL.Raw.Extension.ARB.ShaderTextureLod
    Graphics.GL.Raw.Extension.ARB.ShadingLanguage100
    Graphics.GL.Raw.Extension.ARB.ShadingLanguage420pack
    Graphics.GL.Raw.Extension.ARB.ShadingLanguageInclude
    Graphics.GL.Raw.Extension.ARB.ShadingLanguagePacking
    Graphics.GL.Raw.Extension.ARB.Shadow
    Graphics.GL.Raw.Extension.ARB.ShadowAmbient
    Graphics.GL.Raw.Extension.ARB.SparseBuffer
    Graphics.GL.Raw.Extension.ARB.SparseTexture
    Graphics.GL.Raw.Extension.ARB.StencilTexturing
    Graphics.GL.Raw.Extension.ARB.Sync
    Graphics.GL.Raw.Extension.ARB.TessellationShader
    Graphics.GL.Raw.Extension.ARB.TextureBarrier
    Graphics.GL.Raw.Extension.ARB.TextureBorderClamp
    Graphics.GL.Raw.Extension.ARB.TextureBufferObject
    Graphics.GL.Raw.Extension.ARB.TextureBufferObjectRgb32
    Graphics.GL.Raw.Extension.ARB.TextureBufferRange
    Graphics.GL.Raw.Extension.ARB.TextureCompression
    Graphics.GL.Raw.Extension.ARB.TextureCompressionBptc
    Graphics.GL.Raw.Extension.ARB.TextureCompressionRgtc
    Graphics.GL.Raw.Extension.ARB.TextureCubeMap
    Graphics.GL.Raw.Extension.ARB.TextureCubeMapArray
    Graphics.GL.Raw.Extension.ARB.TextureEnvAdd
    Graphics.GL.Raw.Extension.ARB.TextureEnvCombine
    Graphics.GL.Raw.Extension.ARB.TextureEnvCrossbar
    Graphics.GL.Raw.Extension.ARB.TextureEnvDot3
    Graphics.GL.Raw.Extension.ARB.TextureFloat
    Graphics.GL.Raw.Extension.ARB.TextureGather
    Graphics.GL.Raw.Extension.ARB.TextureMirrorClampToEdge
    Graphics.GL.Raw.Extension.ARB.TextureMirroredRepeat
    Graphics.GL.Raw.Extension.ARB.TextureMultisample
    Graphics.GL.Raw.Extension.ARB.TextureNonPowerOfTwo
    Graphics.GL.Raw.Extension.ARB.TextureQueryLevels
    Graphics.GL.Raw.Extension.ARB.TextureQueryLod
    Graphics.GL.Raw.Extension.ARB.TextureRectangle
    Graphics.GL.Raw.Extension.ARB.TextureRg
    Graphics.GL.Raw.Extension.ARB.TextureRgb10A2ui
    Graphics.GL.Raw.Extension.ARB.TextureStencil8
    Graphics.GL.Raw.Extension.ARB.TextureStorage
    Graphics.GL.Raw.Extension.ARB.TextureStorageMultisample
    Graphics.GL.Raw.Extension.ARB.TextureSwizzle
    Graphics.GL.Raw.Extension.ARB.TextureView
    Graphics.GL.Raw.Extension.ARB.TimerQuery
    Graphics.GL.Raw.Extension.ARB.TransformFeedback2
    Graphics.GL.Raw.Extension.ARB.TransformFeedback3
    Graphics.GL.Raw.Extension.ARB.TransformFeedbackInstanced
    Graphics.GL.Raw.Extension.ARB.TransformFeedbackOverflowQuery
    Graphics.GL.Raw.Extension.ARB.TransposeMatrix
    Graphics.GL.Raw.Extension.ARB.UniformBufferObject
    Graphics.GL.Raw.Extension.ARB.VertexArrayBgra
    Graphics.GL.Raw.Extension.ARB.VertexArrayObject
    Graphics.GL.Raw.Extension.ARB.VertexAttrib64bit
    Graphics.GL.Raw.Extension.ARB.VertexAttribBinding
    Graphics.GL.Raw.Extension.ARB.VertexBlend
    Graphics.GL.Raw.Extension.ARB.VertexBufferObject
    Graphics.GL.Raw.Extension.ARB.VertexProgram
    Graphics.GL.Raw.Extension.ARB.VertexShader
    Graphics.GL.Raw.Extension.ARB.VertexType10f11f11fRev
    Graphics.GL.Raw.Extension.ARB.VertexType2101010Rev
    Graphics.GL.Raw.Extension.ARB.ViewportArray
    Graphics.GL.Raw.Extension.ARB.WindowPos
    Graphics.GL.Raw.Extension.ARM
    Graphics.GL.Raw.Extension.ARM.MaliProgramBinary
    Graphics.GL.Raw.Extension.ARM.MaliShaderBinary
    Graphics.GL.Raw.Extension.ARM.Rgba8
    Graphics.GL.Raw.Extension.ARM.ShaderFramebufferFetch
    Graphics.GL.Raw.Extension.ARM.ShaderFramebufferFetchDepthStencil
    Graphics.GL.Raw.Extension.ATI
    Graphics.GL.Raw.Extension.ATI.DrawBuffers
    Graphics.GL.Raw.Extension.ATI.ElementArray
    Graphics.GL.Raw.Extension.ATI.EnvmapBumpmap
    Graphics.GL.Raw.Extension.ATI.FragmentShader
    Graphics.GL.Raw.Extension.ATI.MapObjectBuffer
    Graphics.GL.Raw.Extension.ATI.Meminfo
    Graphics.GL.Raw.Extension.ATI.PixelFormatFloat
    Graphics.GL.Raw.Extension.ATI.PnTriangles
    Graphics.GL.Raw.Extension.ATI.SeparateStencil
    Graphics.GL.Raw.Extension.ATI.TextFragmentShader
    Graphics.GL.Raw.Extension.ATI.TextureEnvCombine3
    Graphics.GL.Raw.Extension.ATI.TextureFloat
    Graphics.GL.Raw.Extension.ATI.TextureMirrorOnce
    Graphics.GL.Raw.Extension.ATI.VertexArrayObject
    Graphics.GL.Raw.Extension.ATI.VertexAttribArrayObject
    Graphics.GL.Raw.Extension.ATI.VertexStreams
    Graphics.GL.Raw.Extension.DMP
    Graphics.GL.Raw.Extension.DMP.ProgramBinary
    Graphics.GL.Raw.Extension.DMP.ShaderBinary
    Graphics.GL.Raw.Extension.EXT
    Graphics.GL.Raw.Extension.EXT.FourTwoTwoPixels
    Graphics.GL.Raw.Extension.EXT.Abgr
    Graphics.GL.Raw.Extension.EXT.Bgra
    Graphics.GL.Raw.Extension.EXT.BindableUniform
    Graphics.GL.Raw.Extension.EXT.BlendColor
    Graphics.GL.Raw.Extension.EXT.BlendEquationSeparate
    Graphics.GL.Raw.Extension.EXT.BlendFuncSeparate
    Graphics.GL.Raw.Extension.EXT.BlendLogicOp
    Graphics.GL.Raw.Extension.EXT.BlendMinmax
    Graphics.GL.Raw.Extension.EXT.BlendSubtract
    Graphics.GL.Raw.Extension.EXT.ClipVolumeHint
    Graphics.GL.Raw.Extension.EXT.Cmyka
    Graphics.GL.Raw.Extension.EXT.ColorBufferHalfFloat
    Graphics.GL.Raw.Extension.EXT.ColorSubtable
    Graphics.GL.Raw.Extension.EXT.CompiledVertexArray
    Graphics.GL.Raw.Extension.EXT.Convolution
    Graphics.GL.Raw.Extension.EXT.CoordinateFrame
    Graphics.GL.Raw.Extension.EXT.CopyImage
    Graphics.GL.Raw.Extension.EXT.CopyTexture
    Graphics.GL.Raw.Extension.EXT.CullVertex
    Graphics.GL.Raw.Extension.EXT.DebugLabel
    Graphics.GL.Raw.Extension.EXT.DebugMarker
    Graphics.GL.Raw.Extension.EXT.DepthBoundsTest
    Graphics.GL.Raw.Extension.EXT.DirectStateAccess
    Graphics.GL.Raw.Extension.EXT.DiscardFramebuffer
    Graphics.GL.Raw.Extension.EXT.DisjointTimerQuery
    Graphics.GL.Raw.Extension.EXT.DrawBuffers
    Graphics.GL.Raw.Extension.EXT.DrawBuffers2
    Graphics.GL.Raw.Extension.EXT.DrawBuffersIndexed
    Graphics.GL.Raw.Extension.EXT.DrawInstanced
    Graphics.GL.Raw.Extension.EXT.DrawRangeElements
    Graphics.GL.Raw.Extension.EXT.FogCoord
    Graphics.GL.Raw.Extension.EXT.FramebufferBlit
    Graphics.GL.Raw.Extension.EXT.FramebufferMultisample
    Graphics.GL.Raw.Extension.EXT.FramebufferMultisampleBlitScaled
    Graphics.GL.Raw.Extension.EXT.FramebufferObject
    Graphics.GL.Raw.Extension.EXT.FramebufferSRGB
    Graphics.GL.Raw.Extension.EXT.GeometryPointSize
    Graphics.GL.Raw.Extension.EXT.GeometryShader
    Graphics.GL.Raw.Extension.EXT.GeometryShader4
    Graphics.GL.Raw.Extension.EXT.GpuProgramParameters
    Graphics.GL.Raw.Extension.EXT.GpuShader4
    Graphics.GL.Raw.Extension.EXT.GpuShader5
    Graphics.GL.Raw.Extension.EXT.Histogram
    Graphics.GL.Raw.Extension.EXT.IndexArrayFormats
    Graphics.GL.Raw.Extension.EXT.IndexFunc
    Graphics.GL.Raw.Extension.EXT.IndexMaterial
    Graphics.GL.Raw.Extension.EXT.IndexTexture
    Graphics.GL.Raw.Extension.EXT.InstancedArrays
    Graphics.GL.Raw.Extension.EXT.LightTexture
    Graphics.GL.Raw.Extension.EXT.MapBufferRange
    Graphics.GL.Raw.Extension.EXT.MiscAttribute
    Graphics.GL.Raw.Extension.EXT.MultiDrawArrays
    Graphics.GL.Raw.Extension.EXT.Multisample
    Graphics.GL.Raw.Extension.EXT.MultisampledRenderToTexture
    Graphics.GL.Raw.Extension.EXT.MultiviewDrawBuffers
    Graphics.GL.Raw.Extension.EXT.OcclusionQueryBoolean
    Graphics.GL.Raw.Extension.EXT.PackedDepthStencil
    Graphics.GL.Raw.Extension.EXT.PackedFloat
    Graphics.GL.Raw.Extension.EXT.PackedPixels
    Graphics.GL.Raw.Extension.EXT.PalettedTexture
    Graphics.GL.Raw.Extension.EXT.PixelBufferObject
    Graphics.GL.Raw.Extension.EXT.PixelTransform
    Graphics.GL.Raw.Extension.EXT.PixelTransformColorTable
    Graphics.GL.Raw.Extension.EXT.PointParameters
    Graphics.GL.Raw.Extension.EXT.PolygonOffset
    Graphics.GL.Raw.Extension.EXT.PolygonOffsetClamp
    Graphics.GL.Raw.Extension.EXT.PostDepthCoverage
    Graphics.GL.Raw.Extension.EXT.PrimitiveBoundingBox
    Graphics.GL.Raw.Extension.EXT.ProvokingVertex
    Graphics.GL.Raw.Extension.EXT.PvrtcSRGB
    Graphics.GL.Raw.Extension.EXT.RasterMultisample
    Graphics.GL.Raw.Extension.EXT.ReadFormatBgra
    Graphics.GL.Raw.Extension.EXT.RescaleNormal
    Graphics.GL.Raw.Extension.EXT.Robustness
    Graphics.GL.Raw.Extension.EXT.SRGB
    Graphics.GL.Raw.Extension.EXT.SRGBWriteControl
    Graphics.GL.Raw.Extension.EXT.SecondaryColor
    Graphics.GL.Raw.Extension.EXT.SeparateShaderObjects
    Graphics.GL.Raw.Extension.EXT.SeparateSpecularColor
    Graphics.GL.Raw.Extension.EXT.ShaderFramebufferFetch
    Graphics.GL.Raw.Extension.EXT.ShaderImageLoadFormatted
    Graphics.GL.Raw.Extension.EXT.ShaderImageLoadStore
    Graphics.GL.Raw.Extension.EXT.ShaderImplicitConversions
    Graphics.GL.Raw.Extension.EXT.ShaderIntegerMix
    Graphics.GL.Raw.Extension.EXT.ShaderIoBlocks
    Graphics.GL.Raw.Extension.EXT.ShaderPixelLocalStorage
    Graphics.GL.Raw.Extension.EXT.ShaderTextureLod
    Graphics.GL.Raw.Extension.EXT.ShadowFuncs
    Graphics.GL.Raw.Extension.EXT.ShadowSamplers
    Graphics.GL.Raw.Extension.EXT.SharedTexturePalette
    Graphics.GL.Raw.Extension.EXT.SparseTexture2
    Graphics.GL.Raw.Extension.EXT.StencilClearTag
    Graphics.GL.Raw.Extension.EXT.StencilTwoSide
    Graphics.GL.Raw.Extension.EXT.StencilWrap
    Graphics.GL.Raw.Extension.EXT.Subtexture
    Graphics.GL.Raw.Extension.EXT.TessellationPointSize
    Graphics.GL.Raw.Extension.EXT.TessellationShader
    Graphics.GL.Raw.Extension.EXT.Texture
    Graphics.GL.Raw.Extension.EXT.Texture3D
    Graphics.GL.Raw.Extension.EXT.TextureArray
    Graphics.GL.Raw.Extension.EXT.TextureBorderClamp
    Graphics.GL.Raw.Extension.EXT.TextureBuffer
    Graphics.GL.Raw.Extension.EXT.TextureBufferObject
    Graphics.GL.Raw.Extension.EXT.TextureCompressionDxt1
    Graphics.GL.Raw.Extension.EXT.TextureCompressionLatc
    Graphics.GL.Raw.Extension.EXT.TextureCompressionRgtc
    Graphics.GL.Raw.Extension.EXT.TextureCompressionS3tc
    Graphics.GL.Raw.Extension.EXT.TextureCubeMap
    Graphics.GL.Raw.Extension.EXT.TextureCubeMapArray
    Graphics.GL.Raw.Extension.EXT.TextureEnvAdd
    Graphics.GL.Raw.Extension.EXT.TextureEnvCombine
    Graphics.GL.Raw.Extension.EXT.TextureEnvDot3
    Graphics.GL.Raw.Extension.EXT.TextureFilterAnisotropic
    Graphics.GL.Raw.Extension.EXT.TextureFilterMinmax
    Graphics.GL.Raw.Extension.EXT.TextureFormatBGRA8888
    Graphics.GL.Raw.Extension.EXT.TextureInteger
    Graphics.GL.Raw.Extension.EXT.TextureLodBias
    Graphics.GL.Raw.Extension.EXT.TextureMirrorClamp
    Graphics.GL.Raw.Extension.EXT.TextureObject
    Graphics.GL.Raw.Extension.EXT.TexturePerturbNormal
    Graphics.GL.Raw.Extension.EXT.TextureRg
    Graphics.GL.Raw.Extension.EXT.TextureSRGB
    Graphics.GL.Raw.Extension.EXT.TextureSRGBDecode
    Graphics.GL.Raw.Extension.EXT.TextureSharedExponent
    Graphics.GL.Raw.Extension.EXT.TextureSnorm
    Graphics.GL.Raw.Extension.EXT.TextureStorage
    Graphics.GL.Raw.Extension.EXT.TextureSwizzle
    Graphics.GL.Raw.Extension.EXT.TextureType2101010REV
    Graphics.GL.Raw.Extension.EXT.TextureView
    Graphics.GL.Raw.Extension.EXT.TimerQuery
    Graphics.GL.Raw.Extension.EXT.TransformFeedback
    Graphics.GL.Raw.Extension.EXT.UnpackSubimage
    Graphics.GL.Raw.Extension.EXT.VertexArray
    Graphics.GL.Raw.Extension.EXT.VertexArrayBgra
    Graphics.GL.Raw.Extension.EXT.VertexAttrib64bit
    Graphics.GL.Raw.Extension.EXT.VertexShader
    Graphics.GL.Raw.Extension.EXT.VertexWeighting
    Graphics.GL.Raw.Extension.EXT.X11SyncObject
    Graphics.GL.Raw.Extension.FJ
    Graphics.GL.Raw.Extension.FJ.ShaderBinaryGCCSO
    Graphics.GL.Raw.Extension.GREMEDY
    Graphics.GL.Raw.Extension.GREMEDY.FrameTerminator
    Graphics.GL.Raw.Extension.GREMEDY.StringMarker
    Graphics.GL.Raw.Extension.HP
    Graphics.GL.Raw.Extension.HP.ConvolutionBorderModes
    Graphics.GL.Raw.Extension.HP.ImageTransform
    Graphics.GL.Raw.Extension.HP.OcclusionTest
    Graphics.GL.Raw.Extension.HP.TextureLighting
    Graphics.GL.Raw.Extension.IBM
    Graphics.GL.Raw.Extension.IBM.CullVertex
    Graphics.GL.Raw.Extension.IBM.MultimodeDrawArrays
    Graphics.GL.Raw.Extension.IBM.RasterposClip
    Graphics.GL.Raw.Extension.IBM.StaticData
    Graphics.GL.Raw.Extension.IBM.TextureMirroredRepeat
    Graphics.GL.Raw.Extension.IBM.VertexArrayLists
    Graphics.GL.Raw.Extension.IMG
    Graphics.GL.Raw.Extension.IMG.MultisampledRenderToTexture
    Graphics.GL.Raw.Extension.IMG.ProgramBinary
    Graphics.GL.Raw.Extension.IMG.ReadFormat
    Graphics.GL.Raw.Extension.IMG.ShaderBinary
    Graphics.GL.Raw.Extension.IMG.TextureCompressionPvrtc
    Graphics.GL.Raw.Extension.IMG.TextureCompressionPvrtc2
    Graphics.GL.Raw.Extension.IMG.TextureEnvEnhancedFixedFunction
    Graphics.GL.Raw.Extension.IMG.UserClipPlane
    Graphics.GL.Raw.Extension.INGR
    Graphics.GL.Raw.Extension.INGR.BlendFuncSeparate
    Graphics.GL.Raw.Extension.INGR.ColorClamp
    Graphics.GL.Raw.Extension.INGR.InterlaceRead
    Graphics.GL.Raw.Extension.INTEL
    Graphics.GL.Raw.Extension.INTEL.FragmentShaderOrdering
    Graphics.GL.Raw.Extension.INTEL.MapTexture
    Graphics.GL.Raw.Extension.INTEL.ParallelArrays
    Graphics.GL.Raw.Extension.INTEL.PerformanceQuery
    Graphics.GL.Raw.Extension.KHR
    Graphics.GL.Raw.Extension.KHR.BlendEquationAdvanced
    Graphics.GL.Raw.Extension.KHR.BlendEquationAdvancedCoherent
    Graphics.GL.Raw.Extension.KHR.ContextFlushControl
    Graphics.GL.Raw.Extension.KHR.Debug
    Graphics.GL.Raw.Extension.KHR.RobustBufferAccessBehavior
    Graphics.GL.Raw.Extension.KHR.Robustness
    Graphics.GL.Raw.Extension.KHR.TextureCompressionAstcHdr
    Graphics.GL.Raw.Extension.KHR.TextureCompressionAstcLdr
    Graphics.GL.Raw.Extension.MESAX
    Graphics.GL.Raw.Extension.MESAX.TextureStack
    Graphics.GL.Raw.Extension.MESA
    Graphics.GL.Raw.Extension.MESA.PackInvert
    Graphics.GL.Raw.Extension.MESA.ResizeBuffers
    Graphics.GL.Raw.Extension.MESA.WindowPos
    Graphics.GL.Raw.Extension.MESA.YcbcrTexture
    Graphics.GL.Raw.Extension.NVX
    Graphics.GL.Raw.Extension.NVX.ConditionalRender
    Graphics.GL.Raw.Extension.NVX.GpuMemoryInfo
    Graphics.GL.Raw.Extension.NV
    Graphics.GL.Raw.Extension.NV.BindlessMultiDrawIndirect
    Graphics.GL.Raw.Extension.NV.BindlessMultiDrawIndirectCount
    Graphics.GL.Raw.Extension.NV.BindlessTexture
    Graphics.GL.Raw.Extension.NV.BlendEquationAdvanced
    Graphics.GL.Raw.Extension.NV.BlendEquationAdvancedCoherent
    Graphics.GL.Raw.Extension.NV.BlendSquare
    Graphics.GL.Raw.Extension.NV.ComputeProgram5
    Graphics.GL.Raw.Extension.NV.ConditionalRender
    Graphics.GL.Raw.Extension.NV.ConservativeRaster
    Graphics.GL.Raw.Extension.NV.CopyBuffer
    Graphics.GL.Raw.Extension.NV.CopyDepthToColor
    Graphics.GL.Raw.Extension.NV.CopyImage
    Graphics.GL.Raw.Extension.NV.CoverageSample
    Graphics.GL.Raw.Extension.NV.DeepTexture3D
    Graphics.GL.Raw.Extension.NV.DepthBufferFloat
    Graphics.GL.Raw.Extension.NV.DepthClamp
    Graphics.GL.Raw.Extension.NV.DepthNonlinear
    Graphics.GL.Raw.Extension.NV.DrawBuffers
    Graphics.GL.Raw.Extension.NV.DrawInstanced
    Graphics.GL.Raw.Extension.NV.DrawTexture
    Graphics.GL.Raw.Extension.NV.Evaluators
    Graphics.GL.Raw.Extension.NV.ExplicitAttribLocation
    Graphics.GL.Raw.Extension.NV.ExplicitMultisample
    Graphics.GL.Raw.Extension.NV.FboColorAttachments
    Graphics.GL.Raw.Extension.NV.Fence
    Graphics.GL.Raw.Extension.NV.FillRectangle
    Graphics.GL.Raw.Extension.NV.FloatBuffer
    Graphics.GL.Raw.Extension.NV.FogDistance
    Graphics.GL.Raw.Extension.NV.FragmentCoverageToColor
    Graphics.GL.Raw.Extension.NV.FragmentProgram
    Graphics.GL.Raw.Extension.NV.FragmentProgram2
    Graphics.GL.Raw.Extension.NV.FragmentProgram4
    Graphics.GL.Raw.Extension.NV.FragmentProgramOption
    Graphics.GL.Raw.Extension.NV.FragmentShaderInterlock
    Graphics.GL.Raw.Extension.NV.FramebufferBlit
    Graphics.GL.Raw.Extension.NV.FramebufferMixedSamples
    Graphics.GL.Raw.Extension.NV.FramebufferMultisample
    Graphics.GL.Raw.Extension.NV.FramebufferMultisampleCoverage
    Graphics.GL.Raw.Extension.NV.GenerateMipmapSRGB
    Graphics.GL.Raw.Extension.NV.GeometryProgram4
    Graphics.GL.Raw.Extension.NV.GeometryShader4
    Graphics.GL.Raw.Extension.NV.GeometryShaderPassthrough
    Graphics.GL.Raw.Extension.NV.GpuProgram4
    Graphics.GL.Raw.Extension.NV.GpuProgram5
    Graphics.GL.Raw.Extension.NV.GpuProgram5MemExtended
    Graphics.GL.Raw.Extension.NV.GpuShader5
    Graphics.GL.Raw.Extension.NV.HalfFloat
    Graphics.GL.Raw.Extension.NV.InstancedArrays
    Graphics.GL.Raw.Extension.NV.InternalformatSampleQuery
    Graphics.GL.Raw.Extension.NV.LightMaxExponent
    Graphics.GL.Raw.Extension.NV.MultisampleCoverage
    Graphics.GL.Raw.Extension.NV.MultisampleFilterHint
    Graphics.GL.Raw.Extension.NV.NonSquareMatrices
    Graphics.GL.Raw.Extension.NV.OcclusionQuery
    Graphics.GL.Raw.Extension.NV.PackedDepthStencil
    Graphics.GL.Raw.Extension.NV.ParameterBufferObject
    Graphics.GL.Raw.Extension.NV.ParameterBufferObject2
    Graphics.GL.Raw.Extension.NV.PathRendering
    Graphics.GL.Raw.Extension.NV.PixelDataRange
    Graphics.GL.Raw.Extension.NV.PointSprite
    Graphics.GL.Raw.Extension.NV.PresentVideo
    Graphics.GL.Raw.Extension.NV.PrimitiveRestart
    Graphics.GL.Raw.Extension.NV.ReadBuffer
    Graphics.GL.Raw.Extension.NV.ReadBufferFront
    Graphics.GL.Raw.Extension.NV.ReadDepth
    Graphics.GL.Raw.Extension.NV.ReadDepthStencil
    Graphics.GL.Raw.Extension.NV.ReadStencil
    Graphics.GL.Raw.Extension.NV.RegisterCombiners
    Graphics.GL.Raw.Extension.NV.PathRenderingSharedEdge
    Graphics.GL.Raw.Extension.NV.RegisterCombiners2
    Graphics.GL.Raw.Extension.NV.SRGBFormats
    Graphics.GL.Raw.Extension.NV.SampleLocations
    Graphics.GL.Raw.Extension.NV.SampleMaskOverrideCoverage
    Graphics.GL.Raw.Extension.NV.ShaderAtomicCounters
    Graphics.GL.Raw.Extension.NV.ShaderAtomicFloat
    Graphics.GL.Raw.Extension.NV.ShaderAtomicFp16Vector
    Graphics.GL.Raw.Extension.NV.ShaderAtomicInt64
    Graphics.GL.Raw.Extension.NV.ShaderBufferLoad
    Graphics.GL.Raw.Extension.NV.ShaderBufferStore
    Graphics.GL.Raw.Extension.NV.ShaderStorageBufferObject
    Graphics.GL.Raw.Extension.NV.ShaderThreadGroup
    Graphics.GL.Raw.Extension.NV.ShaderThreadShuffle
    Graphics.GL.Raw.Extension.NV.ShadowSamplersArray
    Graphics.GL.Raw.Extension.NV.ShadowSamplersCube
    Graphics.GL.Raw.Extension.NV.TessellationProgram5
    Graphics.GL.Raw.Extension.NV.TexgenEmboss
    Graphics.GL.Raw.Extension.NV.TexgenReflection
    Graphics.GL.Raw.Extension.NV.TextureBarrier
    Graphics.GL.Raw.Extension.NV.TextureBorderClamp
    Graphics.GL.Raw.Extension.NV.TextureCompressionS3tcUpdate
    Graphics.GL.Raw.Extension.NV.TextureCompressionVtc
    Graphics.GL.Raw.Extension.NV.TextureEnvCombine4
    Graphics.GL.Raw.Extension.NV.TextureExpandNormal
    Graphics.GL.Raw.Extension.NV.TextureMultisample
    Graphics.GL.Raw.Extension.NV.TextureNpot2DMipmap
    Graphics.GL.Raw.Extension.NV.TextureRectangle
    Graphics.GL.Raw.Extension.NV.TextureShader
    Graphics.GL.Raw.Extension.NV.TextureShader2
    Graphics.GL.Raw.Extension.NV.TextureShader3
    Graphics.GL.Raw.Extension.NV.TransformFeedback
    Graphics.GL.Raw.Extension.NV.TransformFeedback2
    Graphics.GL.Raw.Extension.NV.UniformBufferUnifiedMemory
    Graphics.GL.Raw.Extension.NV.VdpauInterop
    Graphics.GL.Raw.Extension.NV.VertexArrayRange
    Graphics.GL.Raw.Extension.NV.VertexArrayRange2
    Graphics.GL.Raw.Extension.NV.VertexAttribInteger64bit
    Graphics.GL.Raw.Extension.NV.VertexBufferUnifiedMemory
    Graphics.GL.Raw.Extension.NV.VertexProgram
    Graphics.GL.Raw.Extension.NV.VertexProgram11
    Graphics.GL.Raw.Extension.NV.VertexProgram2
    Graphics.GL.Raw.Extension.NV.VertexProgram2Option
    Graphics.GL.Raw.Extension.NV.VertexProgram3
    Graphics.GL.Raw.Extension.NV.VertexProgram4
    Graphics.GL.Raw.Extension.NV.VideoCapture
    Graphics.GL.Raw.Extension.OES
    Graphics.GL.Raw.Extension.OES.EGLImage
    Graphics.GL.Raw.Extension.OES.EGLImageExternal
    Graphics.GL.Raw.Extension.OES.BlendEquationSeparate
    Graphics.GL.Raw.Extension.OES.BlendFuncSeparate
    Graphics.GL.Raw.Extension.OES.BlendSubtract
    Graphics.GL.Raw.Extension.OES.ByteCoordinates
    Graphics.GL.Raw.Extension.OES.CompressedETC1RGB8SubTexture
    Graphics.GL.Raw.Extension.OES.CompressedETC1RGB8Texture
    Graphics.GL.Raw.Extension.OES.CompressedPalettedTexture
    Graphics.GL.Raw.Extension.OES.Depth24
    Graphics.GL.Raw.Extension.OES.Depth32
    Graphics.GL.Raw.Extension.OES.DepthTexture
    Graphics.GL.Raw.Extension.OES.DrawTexture
    Graphics.GL.Raw.Extension.OES.ElementIndexUint
    Graphics.GL.Raw.Extension.OES.ExtendedMatrixPalette
    Graphics.GL.Raw.Extension.OES.FboRenderMipmap
    Graphics.GL.Raw.Extension.OES.FixedPoint
    Graphics.GL.Raw.Extension.OES.FragmentPrecisionHigh
    Graphics.GL.Raw.Extension.OES.FramebufferObject
    Graphics.GL.Raw.Extension.OES.GetProgramBinary
    Graphics.GL.Raw.Extension.OES.Mapbuffer
    Graphics.GL.Raw.Extension.OES.MatrixGet
    Graphics.GL.Raw.Extension.OES.MatrixPalette
    Graphics.GL.Raw.Extension.OES.PackedDepthStencil
    Graphics.GL.Raw.Extension.OES.PointSizeArray
    Graphics.GL.Raw.Extension.OES.PointSprite
    Graphics.GL.Raw.Extension.OES.QueryMatrix
    Graphics.GL.Raw.Extension.OES.ReadFormat
    Graphics.GL.Raw.Extension.OES.RequiredInternalformat
    Graphics.GL.Raw.Extension.OES.Rgb8Rgba8
    Graphics.GL.Raw.Extension.OES.SampleShading
    Graphics.GL.Raw.Extension.OES.SampleVariables
    Graphics.GL.Raw.Extension.OES.ShaderImageAtomic
    Graphics.GL.Raw.Extension.OES.ShaderMultisampleInterpolation
    Graphics.GL.Raw.Extension.OES.SinglePrecision
    Graphics.GL.Raw.Extension.OES.StandardDerivatives
    Graphics.GL.Raw.Extension.OES.Stencil1
    Graphics.GL.Raw.Extension.OES.Stencil4
    Graphics.GL.Raw.Extension.OES.Stencil8
    Graphics.GL.Raw.Extension.OES.StencilWrap
    Graphics.GL.Raw.Extension.OES.SurfacelessContext
    Graphics.GL.Raw.Extension.OES.Texture3D
    Graphics.GL.Raw.Extension.OES.TextureCompressionAstc
    Graphics.GL.Raw.Extension.OES.TextureCubeMap
    Graphics.GL.Raw.Extension.OES.TextureEnvCrossbar
    Graphics.GL.Raw.Extension.OES.TextureFloat
    Graphics.GL.Raw.Extension.OES.TextureFloatLinear
    Graphics.GL.Raw.Extension.OES.TextureHalfFloat
    Graphics.GL.Raw.Extension.OES.TextureHalfFloatLinear
    Graphics.GL.Raw.Extension.OES.TextureMirroredRepeat
    Graphics.GL.Raw.Extension.OES.TextureNpot
    Graphics.GL.Raw.Extension.OES.TextureStencil8
    Graphics.GL.Raw.Extension.OES.TextureStorageMultisample2dArray
    Graphics.GL.Raw.Extension.OES.VertexArrayObject
    Graphics.GL.Raw.Extension.OES.VertexHalfFloat
    Graphics.GL.Raw.Extension.OES.VertexType1010102
    Graphics.GL.Raw.Extension.OML
    Graphics.GL.Raw.Extension.OML.Interlace
    Graphics.GL.Raw.Extension.OML.Resample
    Graphics.GL.Raw.Extension.OML.Subsample
    Graphics.GL.Raw.Extension.PGI
    Graphics.GL.Raw.Extension.PGI.MiscHints
    Graphics.GL.Raw.Extension.PGI.VertexHints
    Graphics.GL.Raw.Extension.QCOM
    Graphics.GL.Raw.Extension.QCOM.AlphaTest
    Graphics.GL.Raw.Extension.QCOM.BinningControl
    Graphics.GL.Raw.Extension.QCOM.DriverControl
    Graphics.GL.Raw.Extension.QCOM.ExtendedGet
    Graphics.GL.Raw.Extension.QCOM.ExtendedGet2
    Graphics.GL.Raw.Extension.QCOM.PerfmonGlobalMode
    Graphics.GL.Raw.Extension.QCOM.TiledRendering
    Graphics.GL.Raw.Extension.QCOM.WriteonlyRendering
    Graphics.GL.Raw.Extension.REND
    Graphics.GL.Raw.Extension.REND.ScreenCoordinates
    Graphics.GL.Raw.Extension.S3
    Graphics.GL.Raw.Extension.S3.S3tc
    Graphics.GL.Raw.Extension.SGIS
    Graphics.GL.Raw.Extension.SGIS.DetailTexture
    Graphics.GL.Raw.Extension.SGIS.FogFunction
    Graphics.GL.Raw.Extension.SGIS.GenerateMipmap
    Graphics.GL.Raw.Extension.SGIS.Multisample
    Graphics.GL.Raw.Extension.SGIS.PixelTexture
    Graphics.GL.Raw.Extension.SGIS.PointLineTexgen
    Graphics.GL.Raw.Extension.SGIS.PointParameters
    Graphics.GL.Raw.Extension.SGIS.SharpenTexture
    Graphics.GL.Raw.Extension.SGIS.Texture4D
    Graphics.GL.Raw.Extension.SGIS.TextureBorderClamp
    Graphics.GL.Raw.Extension.SGIS.TextureColorMask
    Graphics.GL.Raw.Extension.SGIS.TextureEdgeClamp
    Graphics.GL.Raw.Extension.SGIS.TextureFilter4
    Graphics.GL.Raw.Extension.SGIS.TextureLod
    Graphics.GL.Raw.Extension.SGIS.TextureSelect
    Graphics.GL.Raw.Extension.SGIX
    Graphics.GL.Raw.Extension.SGIX.Async
    Graphics.GL.Raw.Extension.SGIX.AsyncHistogram
    Graphics.GL.Raw.Extension.SGIX.AsyncPixel
    Graphics.GL.Raw.Extension.SGIX.BlendAlphaMinmax
    Graphics.GL.Raw.Extension.SGIX.CalligraphicFragment
    Graphics.GL.Raw.Extension.SGIX.Clipmap
    Graphics.GL.Raw.Extension.SGIX.ConvolutionAccuracy
    Graphics.GL.Raw.Extension.SGIX.DepthPassInstrument
    Graphics.GL.Raw.Extension.SGIX.DepthTexture
    Graphics.GL.Raw.Extension.SGIX.FlushRaster
    Graphics.GL.Raw.Extension.SGIX.FogOffset
    Graphics.GL.Raw.Extension.SGIX.FragmentLighting
    Graphics.GL.Raw.Extension.SGIX.Framezoom
    Graphics.GL.Raw.Extension.SGIX.IglooInterface
    Graphics.GL.Raw.Extension.SGIX.Instruments
    Graphics.GL.Raw.Extension.SGIX.Interlace
    Graphics.GL.Raw.Extension.SGIX.IrInstrument1
    Graphics.GL.Raw.Extension.SGIX.ListPriority
    Graphics.GL.Raw.Extension.SGIX.PixelTexture
    Graphics.GL.Raw.Extension.SGIX.PixelTiles
    Graphics.GL.Raw.Extension.SGIX.PolynomialFfd
    Graphics.GL.Raw.Extension.SGIX.ReferencePlane
    Graphics.GL.Raw.Extension.SGIX.Resample
    Graphics.GL.Raw.Extension.SGIX.ScalebiasHint
    Graphics.GL.Raw.Extension.SGIX.Shadow
    Graphics.GL.Raw.Extension.SGIX.ShadowAmbient
    Graphics.GL.Raw.Extension.SGIX.Sprite
    Graphics.GL.Raw.Extension.SGIX.Subsample
    Graphics.GL.Raw.Extension.SGIX.TagSampleBuffer
    Graphics.GL.Raw.Extension.SGIX.TextureAddEnv
    Graphics.GL.Raw.Extension.SGIX.TextureCoordinateClamp
    Graphics.GL.Raw.Extension.SGIX.TextureLodBias
    Graphics.GL.Raw.Extension.SGIX.TextureMultiBuffer
    Graphics.GL.Raw.Extension.SGIX.TextureScaleBias
    Graphics.GL.Raw.Extension.SGIX.VertexPreclip
    Graphics.GL.Raw.Extension.SGIX.Ycrcb
    Graphics.GL.Raw.Extension.SGIX.YcrcbSubsample
    Graphics.GL.Raw.Extension.SGIX.Ycrcba
    Graphics.GL.Raw.Extension.SGI
    Graphics.GL.Raw.Extension.SGI.ColorMatrix
    Graphics.GL.Raw.Extension.SGI.ColorTable
    Graphics.GL.Raw.Extension.SGI.TextureColorTable
    Graphics.GL.Raw.Extension.SUNX
    Graphics.GL.Raw.Extension.SUNX.ConstantData
    Graphics.GL.Raw.Extension.SUN
    Graphics.GL.Raw.Extension.SUN.ConvolutionBorderModes
    Graphics.GL.Raw.Extension.SUN.GlobalAlpha
    Graphics.GL.Raw.Extension.SUN.MeshArray
    Graphics.GL.Raw.Extension.SUN.SliceAccum
    Graphics.GL.Raw.Extension.SUN.TriangleList
    Graphics.GL.Raw.Extension.SUN.Vertex
    Graphics.GL.Raw.Extension.VIV
    Graphics.GL.Raw.Extension.VIV.ShaderBinary
    Graphics.GL.Raw.Extension.WIN
    Graphics.GL.Raw.Extension.WIN.PhongShading
    Graphics.GL.Raw.Extension.WIN.SpecularFog
    Graphics.GL.Raw.Profile.Compatibility32
    Graphics.GL.Raw.Profile.Compatibility33
    Graphics.GL.Raw.Profile.Compatibility40
    Graphics.GL.Raw.Profile.Compatibility41
    Graphics.GL.Raw.Profile.Compatibility42
    Graphics.GL.Raw.Profile.Compatibility43
    Graphics.GL.Raw.Profile.Compatibility44
    Graphics.GL.Raw.Profile.Compatibility45
    Graphics.GL.Raw.Profile.Core32
    Graphics.GL.Raw.Profile.Core33
    Graphics.GL.Raw.Profile.Core40
    Graphics.GL.Raw.Profile.Core41
    Graphics.GL.Raw.Profile.Core42
    Graphics.GL.Raw.Profile.Core43
    Graphics.GL.Raw.Profile.Core44
    Graphics.GL.Raw.Profile.Core45
    Graphics.GL.Raw.Profile.EmbeddedCommon11
    Graphics.GL.Raw.Profile.EmbeddedLite11
    Graphics.GL.Raw.Profile.Embedded20
    Graphics.GL.Raw.Profile.Embedded30
    Graphics.GL.Raw.Profile.Embedded31
    Graphics.GL.Raw.Profile.Standard10
    Graphics.GL.Raw.Profile.Standard11
    Graphics.GL.Raw.Profile.Standard12
    Graphics.GL.Raw.Profile.Standard13
    Graphics.GL.Raw.Profile.Standard14
    Graphics.GL.Raw.Profile.Standard15
    Graphics.GL.Raw.Profile.Standard20
    Graphics.GL.Raw.Profile.Standard21
    Graphics.GL.Raw.Profile.Standard30
    Graphics.GL.Raw.Profile.Standard31
